# nexa-analise-avancada-de-imagens-e-texto-com-ia-na-aws

./: .gitignore  README.md
ocr_cnh/: README.md  main.py  pyproject.toml
ocr_cnh/tests/: test_parse.py
ocr_lista_escolar/: README.md  main.py  pyproject.toml
ocr_lista_escolar/tests/: test_parse.py
reconhecimento_atacantes/: README.md  main.py  pyproject.toml
reconhecimento_celebridades/: README.md  main.py  pyproject.toml
