[project]
name = "ocr-lista-escolar"
version = "0.1.0"
description = "Extração de linhas de texto com Amazon Textract"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.63",
    "boto3-stubs[textract]>=1.35.63",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
